[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = { version = "0.11.25" }

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tokio-macros = "2.2.0"
